[package]
name = "mirri-editor"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"

description = "Mirri Editor"

[[bin]]
path = "src/main.rs"
name = "mirri"

[dependencies]
termios = "0.3.1"
smallvec = "1.0.0"
snafu = { version = "0.6.0", features = ["backtraces"] }
term_size = "0.3.1"
structopt = "0.3.4"
bitflags = "1.2.1"
