[package]
name = "mirri-editor"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"

description = "Mirri Editor"

[[bin]]
path = "src/main.rs"
name = "mirri"

[dependencies]
smallvec = "1.1.0"
snafu = { version = "0.6.0", features = ["backtraces"] }
term_size = "0.3.1"
structopt = "0.3.7"
unicode-width = "0.1.7"
signal-hook = "0.1.12"
nix = "0.16.1"
itertools = "0.8.2"
ref_filter_map = "1.0.1"
matches = "0.1.8"
